# vehicle_ac

./: ABAC.cpp  ABAC.h  Attribute.cpp  CMakeLists.txt  README.md  attributes.csv  client-example.cpp  service-example.cpp
config/: vsomeip-local.json  vsomeip-tcp-client.json  vsomeip-tcp-service.json  vsomeip-udp-client.json  vsomeip-udp-service.json  vsomeip.json
